--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,71 @@
+name: Deploy S3-SQS-Lambda-Textract-Dynamo pipeline
+
+on:
+  workflow_dispatch:
+    inputs:
+      aws_region:
+        description: "AWS Region"
+        required: true
+        default: "us-east-1"
+      stack_name:
+        description: "CloudFormation/SAM stack name"
+        required: true
+        default: "textract-pipeline"
+      run_smoke_test:
+        description: "Upload sample file to trigger pipeline after deploy"
+        required: true
+        default: "true"
+      sample_file:
+        description: "Path in repo to sample file"
+        required: true
+        default: "samples/sample.png"
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials via OIDC
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ inputs.aws_region }}
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install AWS SAM CLI
+        run: pip install aws-sam-cli
+
+      - name: Build
+        run: sam build
+
+      - name: Deploy
+        run: |
+          sam deploy \
+            --stack-name "${{ inputs.stack_name }}" \
+            --region "${{ inputs.aws_region }}" \
+            --capabilities CAPABILITY_IAM \
+            --no-confirm-changeset \
+            --no-fail-on-empty-changeset
+
+      - name: Smoke test (upload sample to S3 incoming/)
+        if: ${{ inputs.run_smoke_test == 'true' }}
+        run: |
+          INGEST_BUCKET=$(aws cloudformation describe-stacks \
+            --stack-name "${{ inputs.stack_name }}" \
+            --query "Stacks[0].Outputs[?OutputKey=='IngestBucketName'].OutputValue" \
+            --output text)
+
+          KEY="incoming/$(basename '${{ inputs.sample_file }}')"
+          aws s3 cp "${{ inputs.sample_file }}" "s3://${INGEST_BUCKET}/${KEY}"
+          echo "Uploaded to s3://${INGEST_BUCKET}/${KEY}"
 
