--- a/template.yaml
+++ b/template.yaml
@@ -40,7 +40,7 @@ Resources:
             Resource: !GetAtt MainQueue.Arn
             Condition:
               StringEquals:
-                aws:SourceAccount: !Ref "AWS::AccountId"
+                aws:SourceArn: !Join ["", ["arn:aws:s3:::textract-ingest-", !Ref "AWS::AccountId", "-", !Ref "AWS::Region"]]
               ArnLike:
                 aws:SourceArn: !Join
                   -""
